force-app/main/default/objects/Ramp_Sync_Settings__mdt/Ramp_Sync_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Ramp Sync Settings</label>
    <pluralLabel>Ramp Sync Settings</pluralLabel>
</CustomObject>