force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Default_JE_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_JE_Status__c</fullName>
    <defaultValue>&quot;In Process&quot;</defaultValue>
    <label>Default JE Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>