force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Default_Ledger__c.field-meta.xml
<CustomField>
    <fullName>Default_Ledger__c</fullName>
    <label>Default Ledger</label>
    <length>80</length>
    <type>Text</type>
</CustomField>