force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Enable_Reference_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reference_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, card-transaction import computes a Reference key from the template, stamps it on the Journal Entry Line, and applies matching Ramp Lookup Reference defaults.</description>
    <label>Enable Reference Lookup</label>
    <type>Checkbox</type>
</CustomField>