force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Reference_Key_Template__c.field-meta.xml
<CustomField>
    <fullName>Reference_Key_Template__c</fullName>
    <description>Merge template used to compute the Journal Entry Line Reference key from Ramp transaction attributes, e.g. {merchant_name}-{memo}. Tokens are transaction API field names (dotted paths allowed, e.g. {card_holder.email}); null tokens resolve to empty string.</description>
    <label>Reference Key Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>