force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Send_Sync_Ack__c.field-meta.xml
<CustomField>
    <fullName>Send_Sync_Ack__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, after creating Journal Entries the sync POSTs an acknowledgement to Ramp&apos;s /accounting/syncs endpoint, which marks the transactions SYNCED in Ramp. Uncheck to leave transactions SYNC_READY (useful for repeatable testing).</description>
    <label>Send Sync Acknowledgement to Ramp</label>
    <type>Checkbox</type>
</CustomField>