force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Sync_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Sync_Grouping__c</fullName>
    <description>Controls how Ramp card transactions are grouped into Journal Entries. Daily = one JE per accounting date per entity/currency. Accounting Period = one JE per accounting period per entity/currency.</description>
    <label>Sync Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Accounting Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>