force-app/main/default/objects/Ramp_Sync_Settings__mdt/fields/Vendor_Match_Requires_Payment_History__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Match_Requires_Payment_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, merchant-name vendor matching on card-transaction import only considers Accounts with at least one Cash Disbursement (real payment history). Unchecked = match against all vendor-typed Accounts.</description>
    <label>Vendor Match Requires Payment History</label>
    <type>Checkbox</type>
</CustomField>